delete function added

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,6 +4,8 @@
 
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 
     <application
         android:allowBackup="true"
@@ -13,21 +15,23 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity
-            android:name=".MainActivity"
+            android:name=".activity.MainActivity"
             android:label="@string/title_activity_main"
-            android:theme="@style/AppTheme">
+            android:theme="@style/AppTheme" />
+        <activity android:name="com.radaee.reader.PDFViewAct" />
+        <activity
+            android:name=".activity.AddBookActivity"
+            android:configChanges="keyboardHidden" />
+        <activity android:name=".activity.InfoActivity" />
+        <activity android:name=".activity.TransitionActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name="com.radaee.reader.PDFViewAct" />
-        <activity
-            android:name=".AddBookActivity"
-            android:configChanges="keyboardHidden" />
-        <activity android:name=".ReadActivity" />
-        <activity android:name=".InfoActivity"></activity>
+        <activity android:name=".activity.OpenBookActivity" />
+        <activity android:name=".activity.EditActivity"></activity>
     </application>
 
 </manifest>
