--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,6 +20,7 @@
             android:screenOrientation="portrait"
             android:theme="@style/AppTheme" />
         <activity android:name="com.radaee.reader.PDFViewAct"
+            android:parentActivityName=".activity.InfoActivity"
             android:screenOrientation="portrait"/>
         <activity
             android:name=".activity.AddBookActivity"
