--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     package="release.saosalvador.com.administradorbiblioteca">
 
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
@@ -13,22 +14,26 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme">
+        android:theme="@style/AppTheme"
+        tools:ignore="GoogleAppIndexingWarning">
         <activity
             android:name=".activity.MainActivity"
             android:label="@string/title_activity_main"
             android:screenOrientation="portrait"
             android:theme="@style/AppTheme" />
-        <activity android:name="com.radaee.reader.PDFViewAct"
+        <activity
+            android:name="com.radaee.reader.PDFViewAct"
             android:parentActivityName=".activity.InfoActivity"
-            android:screenOrientation="portrait"/>
+            android:screenOrientation="portrait" />
         <activity
             android:name=".activity.AddBookActivity"
-            android:screenOrientation="portrait"
-            android:configChanges="keyboardHidden" />
-        <activity android:name=".activity.InfoActivity"
-            android:screenOrientation="portrait"/>
-        <activity android:name=".activity.TransitionActivity"
+            android:configChanges="keyboardHidden"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".activity.InfoActivity"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".activity.TransitionActivity"
             android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -36,14 +41,18 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".activity.OpenBookActivity"
-            android:screenOrientation="portrait"/>
-        <activity android:name=".activity.EditActivity"
-            android:screenOrientation="portrait"/>
-        <activity android:name=".activity.CategoryActivity"
-            android:screenOrientation="portrait"/>
-        <activity android:name=".activity.CategoryEditActivity"
-            android:screenOrientation="portrait"></activity>
+        <activity
+            android:name=".activity.OpenBookActivity"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".activity.EditActivity"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".activity.CategoryActivity"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".activity.CategoryEditActivity"
+            android:screenOrientation="portrait" />
     </application>
 
 </manifest>
