--- a/PDFReader/src/main/AndroidManifest.xml
+++ b/PDFReader/src/main/AndroidManifest.xml
@@ -23,7 +23,7 @@
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-                <category android:name="android.intent.category.LAUNCHER" />
+                <categorias android:name="android.intent.categorias.LAUNCHER" />
             </intent-filter>
         </activity>
         <activity
