--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,7 +8,6 @@
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 
-    <!-- To auto-complete the email text field in the bG9naW4 form with the user's emails -->
     <uses-permission android:name="android.permission.GET_ACCOUNTS" />
     <uses-permission android:name="android.permission.READ_PROFILE" />
     <uses-permission android:name="android.permission.READ_CONTACTS" />
@@ -31,27 +30,27 @@
             android:parentActivityName=".activity.InfoActivity"
             android:screenOrientation="portrait" />
         <activity
-            android:name=".activity.AddBookActivity"
+            android:name=".activity.AddLivroActivity"
             android:configChanges="keyboardHidden"
             android:screenOrientation="portrait" />
         <activity
             android:name=".activity.InfoActivity"
             android:screenOrientation="portrait" />
         <activity
-            android:name=".activity.TransitionActivity"
+            android:name=".activity.TransicaoActivity"
             android:screenOrientation="portrait">
         </activity>
         <activity
-            android:name=".activity.OpenBookActivity"
+            android:name=".activity.AbrirLivroActivity"
             android:screenOrientation="portrait" />
         <activity
             android:name=".activity.EditActivity"
             android:screenOrientation="portrait" />
         <activity
-            android:name=".activity.CategoryActivity"
+            android:name=".activity.CategoriasActivity"
             android:screenOrientation="portrait" />
         <activity
-            android:name=".activity.CategoryEditActivity"
+            android:name=".activity.EditarCategoriasActivity"
             android:screenOrientation="portrait" />
         <activity
             android:name=".activity.LoginActivity"
@@ -60,7 +59,7 @@
             <intent-filter  android:label="@string/app_name_administrador">
                 <action android:name="android.intent.action.MAIN" />
 
-                <category android:name="android.intent.category.LAUNCHER" />
+                <category android:name="android.intent.categorias.LAUNCHER" />
             </intent-filter>
         </activity>
     </application>
