--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -59,7 +59,7 @@
             <intent-filter  android:label="@string/app_name_administrador">
                 <action android:name="android.intent.action.MAIN" />
 
-                <category android:name="android.intent.categorias.LAUNCHER" />
+                <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
     </application>
